<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuario"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_title"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:inputType="textPersonName"
                android:id="@+id/et_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nick_hint" />

            <EditText
                android:id="@+id/et_nome"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_hint" />

            <EditText
                android:inputType="phone"
                android:id="@+id/et_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone_hint" />
            <EditText
                android:inputType="number"
                android:id="@+id/et_idade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/idade_hint" />
            <EditText
                android:id="@+id/et_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/senha_hint" />
            <EditText
                android:id="@+id/et_confimar_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirmar_senha_hint" />

            <Spinner
                android:id="@+id/spn_uf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/ufs"
                android:hint="@string/confirmar_senha_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/cb_masc"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_masc" />

                <CheckBox
                    android:id="@+id/cb_fem"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_fem" />

            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <CheckBox
                android:id="@+id/cb_nao_bin"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_nao_bin" />

            <CheckBox
                android:id="@+id/cb_gen_fluido"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_gen_fluido" />

        </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:onClick="cadastrar"
                android:text="@string/cadastrar_button" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:layout_height="wrap_content"
            android:onClick="gotoLogin"
            android:layout_marginVertical="10dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/about"
            android:layout_marginVertical="10dp"/>


    </LinearLayout>

</RelativeLayout>